src-tauri/log.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
warning: unused import: `std::time::Duration`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:8:5
  |
8 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Interface`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:9:35
  |
9 | use windows::core::{ComInterface, Interface};
  |                                   ^^^^^^^^^

warning: unused imports: `LPARAM` and `WPARAM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:14:40
   |
14 | use windows::Win32::Foundation::{HWND, LPARAM, WPARAM};
   |                                        ^^^^^^  ^^^^^^

warning: unused import: `ID3D11RenderTargetView`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:16:61
   |
16 |     ID3D11ComputeShader, ID3D11Device, ID3D11DeviceContext, ID3D11RenderTargetView,
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DXGI_FORMAT_B8G8R8A8_UNORM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:21:36
   |
21 |     DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM, DXGI_FORMAT_R8G8B8A8_UNORM,
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `GetForegroundWindow`, `PostThreadMessageW`, and `TranslateMessage`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:36:23
   |
36 |     DispatchMessageW, GetForegroundWindow, MsgWaitForMultipleObjectsEx, PeekMessageW,
   |                       ^^^^^^^^^^^^^^^^^^^
37 |     PostThreadMessageW, TranslateMessage, MSG, MWMO_INPUTAVAILABLE, PM_REMOVE, QS_ALLINPUT,
   |     ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `s`
 --> src\infrastructure\windowsimpl\scaling\shader.rs:5:12
  |
5 |     core::{s, PCSTR},
  |            ^

warning: unused import: `crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:1:5
  |
1 | use crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `regex::Regex`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:3:5
  |
3 | use regex::Regex;
  |     ^^^^^^^^^^^^

warning: unused imports: `HashMap` and `HashSet`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:4:24
  |
4 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^  ^^^^^^^

error[E0277]: the trait bound `{closure@...}: IntoParam<..., ...>` is not satisfied
   --> src\infrastructure\windowsimpl\scaling\processor.rs:105:27
    |
105 |         pool.FrameArrived(|_, _| Ok(()))?;
    |              ------------ ^^^^^^^^^^^^^ unsatisfied trait bound
    |              |
    |              required by a bound introduced by this call
    |
    = help: the trait `IntoParam<TypedEventHandler<Direct3D11CaptureFramePool, IInspectable>, ReferenceType>` is not implemented for closure `{closure@src\infrastructure\windowsimpl\scaling\processor.rs:105:27: 105:33}`
note: there are multiple different versions of crate `windows_core` in the dependency graph
   --> C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.51.1\src\param.rs:85:1
    |
85  | pub trait IntoParam<T: TypeKind, C = <T as TypeKind>::TypeKind>: Sized
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is the required trait
    |
   ::: src\domain\file.rs:11:5
    |
11  | use tauri::{async_runtime::JoinHandle, AppHandle};
    |     ----- one version of crate `windows_core` used here, as a dependency of crate `windows`
...
15  | use windows::{
    |     ------- one version of crate `windows_core` used here, as a dependency of crate `windows`
    |
   ::: C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.61.2\src\handles.rs:5:1
    |
5   | pub trait Free {
    | -------------- this is the found trait
    = help: you can use `cargo tree` to explore your dependency tree
note: required by a bound in `Direct3D11CaptureFramePool::FrameArrived`
   --> C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.51.1\src\Windows\Graphics\Capture\mod.rs:415:13
    |
413 | ...fn FrameArrived<P0>(&self, handler: P0) -> ::windows_core::Result<super::super::Foundation::EventRegistrationToken>
    |       ------------ required by a bound in this associated function
414 | ...e
415 | ...P0: ::windows_core::IntoParam<super::super::Foundation::TypedEventHandler<Direct3D11CaptureFramePool, ::windows_core::IInspectable>>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Direct3D11CaptureFramePool::FrameArrived`
    = note: the full name for the type has been written to 'E:\Launcherg-Mod\src-tauri\target\debug\deps\launcherg-92aa112abe6cb654.long-type-11752150250830920577.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `is_none` found for struct `Direct3D11CaptureFrame` in the current scope
   --> src\infrastructure\windowsimpl\scaling\processor.rs:142:18
    |
142 |         if frame.is_none() {
    |                  ^^^^^^^ method not found in `Direct3D11CaptureFrame`

error[E0599]: no method named `unwrap` found for struct `Direct3D11CaptureFrame` in the current scope
   --> src\infrastructure\windowsimpl\scaling\processor.rs:145:27
    |
145 |         let frame = frame.unwrap();
    |                           ^^^^^^ method not found in `Direct3D11CaptureFrame`

error[E0599]: no method named `get_overlay_window` found for struct `WindowManager` in the current scope
   --> src\infrastructure\windowsimpl\scaling\processor.rs:240:14
    |
239 |           let overlay_window = window_manager
    |  ______________________________-
240 | |             .get_overlay_window()
    | |_____________-^^^^^^^^^^^^^^^^^^
    |
   ::: src\infrastructure\windowsimpl\scaling\window.rs:12:1
    |
12  |   pub struct WindowManager {
    |   ------------------------ method `get_overlay_window` not found for this struct
    |
help: there is a method `create_overlay_window` with a similar name
    |
240 -             .get_overlay_window()
240 +             .create_overlay_window()
    |

error[E0599]: no method named `ok_or` found for enum `Result` in the current scope
   --> src\infrastructure\windowsimpl\scaling\processor.rs:246:14
    |
245 |           let context = unsafe { device.GetImmediateContext() }
    |  _______________________-
246 | |             .ok_or(anyhow!("Failed to get immediate context"))?;
    | |             -^^^^^ method not found in `Result<ID3D11DeviceContext, Error>`
    | |_____________|
    |

error[E0308]: `?` operator has incompatible types
   --> src\infrastructure\windowsimpl\scaling\processor.rs:271:13
    |
271 |             factory.CreateSwapChainForHwnd(&device, overlay_window, &swap_chain_desc, None, None)?
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `IDXGISwapChain`, found `IDXGISwapChain1`
    |
    = note: `?` operator cannot convert from `IDXGISwapChain1` to `IDXGISwapChain`

error[E0308]: arguments to this function are incorrect
    --> src\infrastructure\windowsimpl\scaling\processor.rs:363:29
     |
363  | ...                   MsgWaitForMultipleObjectsEx(16, None, MWMO_INPUTAVAILABLE, QS_ALLINPUT);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ --  ----  -------------------  ----------- expected `MSG_WAIT_FOR_MULTIPLE_OBJECTS_EX_FLAGS`, found `QUEUE_STATUS_FLAGS`
     |                                                   |   |     |
     |                                                   |   |     expected `QUEUE_STATUS_FLAGS`, found `MSG_WAIT_FOR_MULTIPLE_OBJECTS_EX_FLAGS`
     |                                                   |   expected `u32`, found `std::option::Option<_>`
     |                                                   expected `std::option::Option<&[HANDLE]>`, found `{integer}`
     |
note: function defined here
    --> C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.51.1\src\Windows\Win32\UI\WindowsAndMessaging\mod.rs:2826:15
     |
2826 | pub unsafe fn MsgWaitForMultipleObjectsEx(phandles: ::core::option::Option<&[super::super::Foundation::HANDLE]>, dwmilliseconds: u32, dww...
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: did you mean
     |
363  -                             MsgWaitForMultipleObjectsEx(16, None, MWMO_INPUTAVAILABLE, QS_ALLINPUT);
363  +                             MsgWaitForMultipleObjectsEx(None, 16, QS_ALLINPUT, MWMO_INPUTAVAILABLE);
     |

error[E0061]: this method takes 1 argument but 0 arguments were supplied
   --> src\usecase\scaling.rs:19:19
    |
19  |         processor.start()
    |                   ^^^^^-- argument #1 of type `HWND` is missing
    |
note: method defined here
   --> src\infrastructure\windowsimpl\scaling\processor.rs:236:12
    |
236 |     pub fn start(&mut self, target_hwnd: HWND) -> Result<()> {
    |            ^^^^^            -----------------
help: provide the argument
    |
19  -         processor.start()
19  +         processor.start(/* HWND */)
    |

Some errors have detailed explanations: E0061, E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `launcherg` (bin "launcherg") generated 10 warnings
error: could not compile `launcherg` (bin "launcherg") due to 8 previous errors; 10 warnings emitted
